--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.tiles</groupId>
+		    <artifactId>tiles-extras</artifactId>
+		    <version>2.2.1</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<!-- For Hibernate Validator -->
